--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
             return (data < 10 ? '0' : '') + data;
         }
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25246581-8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-25246581-8');
+</script>
+
 </head>
 <body>
     <div class="container">
