--- a/zones.html
+++ b/zones.html
@@ -24,11 +24,10 @@ permalink: /{{ zone.location }}/index.html
     
                     {% for match in matches.pools %}
                         {% if match.day == day.day %}
-                        {% assign matchTime = match.datetime | addZone: "ja", "Asia/Tokyo" %}
                             <div class="match" data-pool="{{match.pool}}">
                                 <div class="label pool {{match.pool}}">
                                     <div class="match-time">
-                                        <span>{{ matchTime | | addZone: zone.locale, zone.location| dayOffset: matchTime | date: "%a, %b %e" }}</span>
+                                        <span>{{ match.datetime | addZone: "ja", "Asia/Tokyo" | addZone: zone.locale, zone.location| dayOffset: matchTime | date: "%a, %b %e" }}</span>
                                         <p>{{ match.datetime | addZone: zone.locale, zone.location | date: "%H:%M" }}</p>
                                 </div>
                                     <span class="separator"></span>
