--- a/zones.html
+++ b/zones.html
@@ -27,7 +27,7 @@ permalink: /{{ zone.location }}/index.html
                             <div class="match" data-pool="{{match.pool}}">
                                 <div class="label pool {{match.pool}}">
                                     <div class="match-time">
-                                        <span>{{ match.datetime | addZone: "ja", "Asia/Tokyo" | addZone: zone.locale, zone.location| dayOffset: matchTime | date: "%a, %b %e" }}</span>
+                                        <span>{{ match.datetime | addZone: "ja", "Asia/Tokyo" | addZone: zone.locale, zone.location| dayOffset: match.datetime | date: "%a, %b %e" }}</span>
                                         <p>{{ match.datetime | addZone: zone.locale, zone.location | date: "%H:%M" }}</p>
                                 </div>
                                     <span class="separator"></span>
