--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
                                 </div>
                                 <div class="details">
                                     <div class="match-info">
-                                        <div class="teams">
-                                            <p class="home h5">{{ match.home }} v. {{ match.away }}</p> 
-                                        </div>
+                                            <div class="teams">
+                                                    {% if match.homeScore %}
+                                                    <p class="home h5"><span class="score">{{ match.homeScore }}</span> {{ match.home }} <br/> <span class="score">{{ match.awayScore }}</span>{{ match.away }}</p>
+                                                    {% else %}
+                                                    <p class="home h5">{{ match.home }} v. {{ match.away }}</p>
+                                                    {% endif %}
+                                            </div>
                                         <small class="extra-info">
                                             <span>@ {{ match.location }}</span>
                                             <span>Japan time: {{ match.datetime | addZone: "ja", "Asia/Tokyo" | date: "%H:%M" }}</span>
@@ -103,9 +107,13 @@
                                             </div>
                                             <div class="details">
                                                 <div class="match-info">
-                                                    <div class="teams">
-                                                        <p class="home h5">{{ match.home }} v. {{ match.away }}</p> 
-                                                    </div>
+                                                        <div class="teams">
+                                                                {% if match.homeScore %}
+                                                                <p class="home h5"><span class="score">{{ match.homeScore }}</span> {{ match.home }} <br/> <span class="score">{{ match.awayScore }}</span>{{ match.away }}</p>
+                                                                {% else %}
+                                                                <p class="home h5">{{ match.home }} v. {{ match.away }}</p>
+                                                                {% endif %}
+                                                        </div>
                                                     <small class="extra-info">
                                                         <span>@ {{ match.location }}</span>
                                                         <span>Japan time: {{ match.datetime | addZone: "ja", "Asia/Tokyo" | date: "%H:%M" }}</span>
